ejabberd (2.0.0-7) UNRELEASED; urgency=low

  [ Sergei Golovan ]
  * NOT RELEASED YET

  [ Torsten Werner ]
  * Updated german debconf templates translation.

 -- Torsten Werner <twerner@debian.org>  Sat, 29 Mar 2008 12:42:56 +0100

ejabberd (2.0.0-6) unstable; urgency=low

  * Replaced a patch for proxy65 module with nicer one (thanks to Evgeniy
    Khramtsov).
  * Added a patch for S2S module to make STARTTLS working with Erlang R12B.
  * Added a patch by upstream fixes crash when browsing the Update page in
    Erlang R12B.
  * Fixed ODBC patch to work with Erlang R11B also.

 -- Sergei Golovan <sgolovan@debian.org>  Tue, 11 Mar 2008 15:10:42 +0300

ejabberd (2.0.0-5) experimental; urgency=low

  * Turned unnecessary error messages in mod_caps module into debug messages.
  * Added a few patches to shared roster module and also added mod_ctlextra
    (a module which offers many more or less useful commands to ejabberdctl)
    following the discussion in the following thread:
    http://lists.debian.org/debian-edu/2008/03/msg00017.html

 -- Sergei Golovan <sgolovan@debian.org>  Fri, 07 Mar 2008 20:30:07 +0300

ejabberd (2.0.0-4) experimental; urgency=low

  * Updated French debconf templates translation (closes: #468788).
  * Disabled epoll by default in /etc/default/ejabberd.
  * Increased default maximum number of conference room occupants to 500.
    Given increasing popularity of XMPP old default value 200 is too low.
  * Disabled SMP support in ejabberd by default. It isn't necessary in most
    cases but can be less reliable.
  * Enabled PAM authentication support (yet needs to be refined).

 -- Sergei Golovan <sgolovan@debian.org>  Mon, 03 Mar 2008 22:54:48 +0300

ejabberd (2.0.0-3) experimental; urgency=low

  * Increased S2S timeouts. Defaults seems to be too short.
  * Removed a 5-minute delay between a remote server connect failure and the
    next connection attempt. It causes more harm than good.